override proxy version

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -78,6 +78,7 @@ jobs:
       - template: /eng/common/testproxy/test-proxy-tool.yml
         parameters:
           runProxy: true
+          targetVersion: 1.0.0-dev.20230907.1
 
       - template: /eng/pipelines/templates/steps/restore-test-proxy-recordings.yml
         parameters:
