--- a/sdk/resourcemanager/azure-resourcemanager-appplatform/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-appplatform/pom.xml
@@ -49,6 +49,8 @@
       --add-opens com.azure.resourcemanager.appplatform/com.azure.resourcemanager.appplatform=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+
+    <parallelizeTests>false</parallelizeTests>
   </properties>
 
   <developers>
