--- a/sdk/resourcemanager/azure-resourcemanager-containerservice/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-containerservice/pom.xml
@@ -42,6 +42,8 @@
 
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+
+    <parallelizeTests>false</parallelizeTests>
   </properties>
 
   <developers>
