--- a/sdk/resourcemanager/azure-resourcemanager-redis/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-redis/pom.xml
@@ -48,6 +48,8 @@
 
         --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
       </javaModulesSurefireArgLine>
+
+      <parallelizeTests>false</parallelizeTests>
     </properties>
 
     <developers>
