--- a/sdk/resourcemanager/azure-resourcemanager-search/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-search/pom.xml
@@ -45,6 +45,8 @@
 
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+
+    <parallelizeTests>false</parallelizeTests>
   </properties>
 
   <developers>
