Don't run RevApi on non-client SDK pipeline runs

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -116,6 +116,7 @@ jobs:
           AdditionalLintingOptions: ${{ parameters.AdditionalLintingOptions }}
           BuildParallelization: ${{ parameters.BuildParallelization }}
           ContinueOnError: true
+          SDKType: ${{ parameters.SDKType }}
 
       - template: /eng/pipelines/templates/steps/build-and-test.yml
         parameters:
