--- a/eng/pipelines/templates/jobs/ci.versions.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.versions.tests.yml
@@ -68,6 +68,7 @@ jobs:
       - template: /eng/common/testproxy/test-proxy-tool.yml
         parameters:
           runProxy: true
+          targetVersion: 1.0.0-dev.20230908.1
 
       - template: /eng/pipelines/templates/steps/restore-test-proxy-recordings.yml
         parameters:
