Also skip codesnippet for same reason as RevApi

--- a/eng/pipelines/templates/steps/run-and-validate-linting.yml
+++ b/eng/pipelines/templates/steps/run-and-validate-linting.yml
@@ -90,6 +90,9 @@ steps:
       jdkVersionOption: ${{ parameters.JavaBuildVersion }}
       jdkArchitectureOption: 'x64'
       publishJUnitResults: false
-      goals: 'javadoc:jar codesnippet:verify-codesnippet'
+      ${{ if ne(parameters.SDKType, 'client') }}:
+        goals: 'javadoc:jar'
+      ${{ else }}:
+        goals: 'javadoc:jar codesnippet:verify-codesnippet'
     continueOnError: ${{ parameters.ContinueOnError }}
     condition: or(eq(coalesce(variables['IsLatestNonLtsJdk'], true), true), and(${{ parameters.RunLinting }}, succeeded()))
