--- a/sdk/spring/spring-cloud-azure-appconfiguration-config/pom.xml
+++ b/sdk/spring/spring-cloud-azure-appconfiguration-config/pom.xml
@@ -50,6 +50,7 @@
 			<artifactId>azure-data-appconfiguration</artifactId>
 			<version>1.5.0-beta.1</version> <!-- {x-version-update;beta_com.azure:azure-data-appconfiguration;dependency} -->
 		</dependency>
+		<dependency>
 			<groupId>com.azure</groupId>
 			<artifactId>azure-identity</artifactId>
 			<version>1.10.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
