mgmt, update containerregistry to 2023-07-01

--- a/sdk/resourcemanager/azure-resourcemanager-containerregistry/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-containerregistry/pom.xml
@@ -43,6 +43,7 @@
     </javaModulesSurefireArgLine>
 
     <parallelizeTests>false</parallelizeTests>
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <developers>
