--- a/sdk/spring/spring-cloud-azure-starter-monitor/pom.xml
+++ b/sdk/spring/spring-cloud-azure-starter-monitor/pom.xml
@@ -19,6 +19,7 @@
     <maven.compiler.target>${jdk.version}</maven.compiler.target>
     <maven.compiler.testSource>${jdk-test.version}</maven.compiler.testSource>
     <maven.compiler.testTarget>${jdk-test.version}</maven.compiler.testTarget>
+    <jacoco.skip>true</jacoco.skip> <!--Most of the tests are done in the spring-cloud-azure-starter-monitor-test module-->
   </properties>
 
   <groupId>com.azure.spring</groupId>
