--- a/sdk/resourcemanager/azure-resourcemanager-redis/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-redis/pom.xml
@@ -48,7 +48,7 @@
 
         --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
       </javaModulesSurefireArgLine>
-
+      <revapi.skip>true</revapi.skip>
       <parallelizeTests>false</parallelizeTests>
     </properties>
 
