--- a/sdk/formrecognizer/azure-ai-formrecognizer/pom.xml
+++ b/sdk/formrecognizer/azure-ai-formrecognizer/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>azure-core-http-netty</artifactId>
       <version>1.13.7</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
     </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-json</artifactId>
+      <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure:azure-json;dependency} -->
+    </dependency>
 
     <!-- Test Dependencies -->
     <dependency>
@@ -91,6 +96,12 @@
       <artifactId>azure-identity</artifactId>
       <version>1.10.1</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.15.2</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
