--- a/eng/pipelines/docindex.yml
+++ b/eng/pipelines/docindex.yml
@@ -27,7 +27,7 @@ jobs:
           Repositories:
             - Name: $(DocRepoOwner)/$(DocRepoName)
               WorkingDirectory: $(DocRepoLocation)
-              Commitish: djurek/deprecated-moniker
+              Commitish: djurek/archive-moniker2
       # Pull and build the docker image.
       - template: /eng/common/pipelines/templates/steps/docker-pull-image.yml
         parameters:
@@ -88,7 +88,7 @@ jobs:
 
       - template: /eng/common/pipelines/templates/steps/git-push-changes.yml
         parameters:
-          BaseRepoBranch: djurek/deprecated-moniker
+          BaseRepoBranch: djurek/archive-moniker2
           BaseRepoOwner: $(DocRepoOwner)
           CommitMsg: "Update docs CI configuration"
           TargetRepoName: $(DocRepoName)
