--- a/sdk/core/azure-core-http-httpurlconnection/pom.xml
+++ b/sdk/core/azure-core-http-httpurlconnection/pom.xml
@@ -131,7 +131,7 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
       <version>4.11.0</version><!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
       <scope>test</scope>
     </dependency>
