--- a/sdk/schemaregistry/azure-data-schemaregistry-jsonschema/pom.xml
+++ b/sdk/schemaregistry/azure-data-schemaregistry-jsonschema/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-data-schemaregistry</artifactId>
-      <version>1.4.0-beta.3</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry;current} -->
+      <version>1.3.10</version> <!-- {x-version-update;com.azure:azure-data-schemaregistry;current} -->
     </dependency>
 
     <!-- Test dependencies -->
