Add Int environment to SDK test pipeline

--- a/sdk/communication/azure-communication-sms/tests.yml
+++ b/sdk/communication/azure-communication-sms/tests.yml
@@ -5,4 +5,4 @@ stages:
     parameters:
       PackageName: azure-communication-sms
       SafeName: azurecommunicationsms
-      Clouds: 'Public'
+      Clouds: 'Public,Int'
