fix regex for quantum job tests

--- a/sdk/quantum/azure-quantum-jobs/pom.xml
+++ b/sdk/quantum/azure-quantum-jobs/pom.xml
@@ -39,6 +39,10 @@
      <codesnippet.skip>false</codesnippet.skip>
      <javadocDoclet></javadocDoclet>
      <javadocDocletOptions></javadocDocletOptions>
+     <javaModulesSurefireArgLine>
+     --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+     --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+     </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
