--- a/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
+++ b/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
@@ -63,7 +63,11 @@
       <artifactId>azure-core-http-netty</artifactId>
       <version>1.13.7</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
     </dependency>
-
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core-experimental</artifactId>
+      <version>1.0.0-beta.43</version> <!-- {x-version-update;com.azure:azure-core-experimental;dependency} -->
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>com.azure</groupId>
