--- a/sdk/resourcemanager/azure-resourcemanager-containerregistry/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-containerregistry/pom.xml
@@ -41,6 +41,8 @@
 
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <developers>
