--- a/sdk/boms/azure-sdk-bom/pom.xml
+++ b/sdk/boms/azure-sdk-bom/pom.xml
@@ -102,6 +102,11 @@
       </dependency>
       <dependency>
         <groupId>com.azure</groupId>
+        <artifactId>azure-core-amqp</artifactId>
+        <version>2.8.9</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
         <artifactId>azure-core-http-netty</artifactId>
         <version>1.13.7</version>
       </dependency>
