--- a/sdk/communication/azure-communication-sms/tests.yml
+++ b/sdk/communication/azure-communication-sms/tests.yml
@@ -6,3 +6,14 @@ stages:
       PackageName: azure-communication-sms
       SafeName: azurecommunicationsms
       Clouds: 'Public,Int'
+      CloudConfig:
+        Public:
+          SubscriptionConfigurations:
+            - $(sub-config-azure-cloud-test-resources)
+            - $(sub-config-communication-services-cloud-test-resources-common)
+            - $(sub-config-communication-services-cloud-test-resources-java)
+            - $(sub-config-communication-services-sms-cloud-test-resources)
+        Int:
+          SubscriptionConfigurations:
+            - $(sub-config-communication-int-test-resources-common)
+            - $(sub-config-communication-int-test-resources-java)
