--- a/sdk/spring/spring-cloud-azure-resourcemanager/pom.xml
+++ b/sdk/spring/spring-cloud-azure-resourcemanager/pom.xml
@@ -47,6 +47,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.azure.spring</groupId>
+      <artifactId>spring-cloud-azure-stream-binder-servicebus-core</artifactId>
+      <version>4.12.0-beta.1</version> <!-- {x-version-update;com.azure.spring:spring-cloud-azure-stream-binder-servicebus-core;current} -->
+    </dependency>
+
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>4.11.0</version><!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
