Change environment so everything is Maven, like the other pipelines

--- a/eng/pipelines/templates/stages/archetype-java-release-pom-only.yml
+++ b/eng/pipelines/templates/stages/archetype-java-release-pom-only.yml
@@ -55,7 +55,7 @@ stages:
           - deployment: TagRepository
             displayName: "Create release tag"
             condition: ne(variables['Skip.TagRepository'], 'true')
-            environment: github
+            environment: maven
             variables:
               - template: ../variables/globals.yml
             pool:
