--- a/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
+++ b/sdk/appconfiguration/azure-data-appconfiguration/pom.xml
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-jdk-httpclient</artifactId>
-      <version>1.0.0-beta.6</version>
+      <version>1.0.0-beta.6</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
