--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -103,7 +103,7 @@
 /sdk/loadtesting/                                    @Harshan01 @prativen
 
 # ServiceLabel: %Device Update for IoT Hub %Service Attention
-/sdk/deviceupdate/                                   @dpokluda
+/sdk/deviceupdate/                                   @devlie @sedols @darkoa-msft @eshashah-msft @andrewbrownmsft @alancshi @josephmsft @xinanqiu
 
 # PRLabel: %Digital Twins
 /sdk/digitaltwins/                                   @johngallardo @efriesner @abhinav-ghai @Aashish93-stack @sjiherzig @Satya-Kolluri
