--- a/sdk/identity/azure-identity-brokeredauthentication/pom.xml
+++ b/sdk/identity/azure-identity-brokeredauthentication/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>msal4j-brokers</artifactId>
-      <version>1.0.2-beta</version> <!-- {x-version-update;com.microsoft.azure:msal4j;external_dependency} -->
+      <version>1.0.2-beta</version> <!-- {x-version-update;com.microsoft.azure:msal4j-brokers;external_dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
