--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -13,6 +13,7 @@ trigger:
       - sdk/identity/pom.xml
       - sdk/identity/azure-identity/pom.xml
       - sdk/identity/azure-identity-perf/pom.xml
+      - sdk/identity/azure-identity-brokeredauthentication/pom.xml
 
 pr:
   branches:
@@ -28,6 +29,7 @@ pr:
       - sdk/identity/pom.xml
       - sdk/identity/azure-identity/pom.xml
       - sdk/identity/azure-identity-perf/pom.xml
+      - sdk/identity/azure-identity-brokeredauthentication/pom.xml
 
 parameters:
 - name: release_dependsonlivetests
@@ -40,6 +42,10 @@ parameters:
   default: true
 - name: release_azureidentityextensions
   displayName: 'azure-identity-extensions'
+  type: boolean
+  default: true
+- name: release_azureidentitybrokeredauthentication
+  displayName: 'azure-identity-brokeredauthentication'
   type: boolean
   default: true
 
@@ -58,6 +64,10 @@ extends:
         groupId: com.azure
         safeName: azureidentityextensions
         releaseInBatch: ${{ parameters.release_azureidentityextensions }}
+      - name: azure-identity-brokeredauthentication
+        groupId: com.azure
+        safeName: azureidentitybrokeredauthentication
+        releaseInBatch: ${{ parameters.release_azureidentitybrokeredauthentication }}
     AdditionalModules:
       - name: azure-identity-perf
         groupId: com.azure
