--- a/sdk/deviceupdate/azure-iot-deviceupdate/pom.xml
+++ b/sdk/deviceupdate/azure-iot-deviceupdate/pom.xml
@@ -27,6 +27,7 @@
   </scm>
 
   <properties>
+    <jacoco.min.linecoverage>0.25</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.1</jacoco.min.branchcoverage>
     <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
     <javaModulesSurefireArgLine>
