--- a/sdk/servicebus/azure-messaging-servicebus-stress/pom.xml
+++ b/sdk/servicebus/azure-messaging-servicebus-stress/pom.xml
@@ -38,8 +38,15 @@
 
     <dependency>
       <groupId>com.azure</groupId>
+      <artifactId>azure-core-amqp</artifactId>
+      <version>2.9.0-beta.5</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;current} -->
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.azure</groupId>
       <artifactId>azure-messaging-servicebus</artifactId>
-      <version>7.15.0-beta.4</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;current} -->
+      <version>7.15.0-beta.3</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;current} -->
     </dependency>
 
     <!-- Enable SDK metrics -->
@@ -53,7 +60,7 @@
     <dependency>
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
-      <version>3.1.10</version> <!-- {x-version-update;org.codehaus.janino:janino;external_dependency} -->
+      <version>3.1.9</version> <!-- {x-version-update;org.codehaus.janino:janino;external_dependency} -->
     </dependency>
   </dependencies>
 
