--- a/sdk/appconfiguration/ci.yml
+++ b/sdk/appconfiguration/ci.yml
@@ -61,3 +61,9 @@ extends:
         groupId: com.azure.resourcemanager
         safeName: azureresourcemanagerappconfiguration
         releaseInBatch: ${{ parameters.release_azureresourcemanagerappconfiguration }}
+    MatrixConfigs:
+      - Name: App_configuration_ci
+        Path: sdk/appconfiguration/platform-matrix-ci.json
+        Selection: sparse
+        NonSparseParameters: Agent
+        GenerateVMJobs: true
