Update ci.yml groupId to be com.azure

--- a/sdk/easm/ci.yml
+++ b/sdk/easm/ci.yml
@@ -36,5 +36,5 @@ extends:
     EnableBatchRelease: true
     Artifacts:
       - name: azure-analytics-defender-easm
-        groupId: com.azure.analytics
+        groupId: com.azure
         safeName: azureanalyticsdefendereasm
