--- a/sdk/spring/spring-messaging-azure-servicebus/pom.xml
+++ b/sdk/spring/spring-messaging-azure-servicebus/pom.xml
@@ -53,6 +53,11 @@
       <version>7.14.4</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;dependency} -->
     </dependency>
     <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.44.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
       <version>5.3.30</version> <!-- {x-version-update;org.springframework:spring-tx;external_dependency} -->
